--- a/Geobase/wwwroot/views/ipLocation.html
+++ b/Geobase/wwwroot/views/ipLocation.html
@@ -1,1 +1,8 @@
 ﻿<p>IP LOCATION</p>
+<form action="javascript:void(0);" onsubmit="GetIpLocation()">
+    <label for="ipAddressInput">Ip Address:</label>
+    <input type="text" id="ipAddressInput" name="ipAddress"/>
+    <input type="submit" value="Check"/>
+</form>
+<br/>
+<div id="results"></div>
