--- a/Geobase/wwwroot/views/cityLocations.html
+++ b/Geobase/wwwroot/views/cityLocations.html
@@ -1,8 +1,6 @@
-﻿<p>CITY LOCATIONS</p>
-<form action="javascript:void(0);" onsubmit="GetCityLocations()">
+﻿<form action="javascript:void(0);" onsubmit="GetCityLocations()">
 	<label for="cityNameInput">City Name:</label>
 	<input type="text" id="cityNameInput" name="cityName" />
-	<input type="submit" value="Get!" />
+	<input type="submit" value="Search" />
 </form>
-<br />
 <div id="results"></div>
