--- a/Geobase/wwwroot/views/cityLocations.html
+++ b/Geobase/wwwroot/views/cityLocations.html
@@ -1,4 +1,4 @@
-﻿<form action="javascript:void(0);" onsubmit="GetCityLocations()">
+﻿<form action="javascript:void(0);" onsubmit="getCityLocations()">
 	<label for="cityNameInput">City Name:</label>
 	<input type="text" id="cityNameInput" name="cityName" />
 	<input type="submit" value="Search" />
