--- a/Geobase/wwwroot/views/ipLocation.html
+++ b/Geobase/wwwroot/views/ipLocation.html
@@ -1,4 +1,4 @@
-﻿<form action="javascript:void(0);" onsubmit="GetIpLocation()">
+﻿<form action="javascript:void(0);" onsubmit="getIpLocation()">
     <label for="ipAddressInput">Ip Address:</label>
     <input type="text" id="ipAddressInput" name="ipAddress"/>
     <input type="submit" value="Search"/>
